--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "^2.1.8",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
